--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "node_modules\\.bin\\tailwindcss -i ./src/input.css -o ./dist/output.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
